--- a/shirt-page v8.html
+++ b/shirt-page v8.html
@@ -73,7 +73,7 @@
       <img src="shirt6.jpg" alt="Shirt 6">
   </div>
 
-<a class="back-link" href="effect v34.html">← Back to all</a>
+<a class="back-link" href="index.html">← Back to all</a>
 
 
 </body>
