--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
   </form>
 </div>
 
+</scrip>
 	 <div class="parallax-container">
 	<div class="parallax-background"></div>
 	<div class="content">
@@ -188,6 +189,7 @@
 	<div class="content">
 	    <a href="sweatpants-page v1.html">
 	<div>
+	</scrip>
 
 <div id="skirt" class="parallax-section" style="background-image: url('Skirt.jpg');">
   <h1>Skirts</h1>
