--- a/skirt-page v18.html
+++ b/skirt-page v18.html
@@ -73,7 +73,7 @@
       <img src="skirt v6.jpg" alt="Skirt 6">
   </div>
 
-<a class="back-link" href="effect-page v34.html">← Back to all skirts</a>
+<a class="back-link" href="index.html">← Back to all skirts</a>
 
 
 </body>
