--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 	 <class="parallax-container">
 	<div class="parallax-background"></div>
 	<div class="content">
-	    <a href="sweatpants-page v1.html">
+	    <a href="skirt-page v18.html">
 	<div>
 
 <div id="skirt" class="parallax-section" style="background-image: url('Skirt.jpg');">
