--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 	 <div class="parallax-container">
 	<div class="parallax-background"></div>
 	<div class="content">
-	    <a href="Cardigan-page v1.html">
+	    <a href="cardigan-page v1.html">
 	<div>
 
 <div id="cardigan" class="parallax-section" style="background-image: url('Cardigan.jpg');">
