--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	    <a href="shirt-page v8.html">
 	<div>
 
-<div id="shirt" class="parallax-section" style="background-image: url('shirt.jpg');">
+<div id="shirt" class="parallax-section" style="background-image: url('shirt 3.jpg');">
   <h1>Shirt</h1>
 </div>
 </scrip>
