--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	    <a href="skirt-page v18.html">
 	<div>
 
-<div id="skirt" class="parallax-section" style="background-image: url('Skirt.jpg');">
+<div id="skirt" class="parallax-section" style="background-image: url('Skirt 3.jpg');">
   <h1>Skirts</h1>
 </div>
 
