--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 	    <a href="skirt-page v18.html">
 	<div>
 
-<div id="skirt" class="parallax-section" style="background-image: url('Skirt v3.jpg');">
+<div id="skirt" class="parallax-section" style="background-image: url('skirt v2.jpg');">
   <h1>Skirts</h1>
 </div>
 
