--- a/cardigan-page v1.html
+++ b/cardigan-page v1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Shirt Page</title>
+  <title>cardigan Page</title>
   <style>
     * {
       margin: 0;
@@ -51,26 +51,26 @@
 </head>
 <body>
 
-  <h1 style="text-align:center; margin-bottom: 20px;">Sweat pants Collection</h1>
+  <h1 style="text-align:center; margin-bottom: 20px;">cardigan Collection</h1>
 
   <div class="gallery">
     <a href="cardigan1 v1.html">
-      <img src="cardigan.jpg" alt="Sweatpants 1">
+      <img src="cardigan.jpg" alt="cardigan 1">
 
     <a href="cardigan2 v1.html">
-      <img src="cardigan 2.jpg" alt="Sweatpants 2">
+      <img src="cardigan 2.jpg" alt="cardigan 2">
 
     <a href="cardigan3 v1.html">
-      <img src="cardigan 3.jpg" alt="Sweatpants 3">
+      <img src="cardigan 3.jpg" alt="cardigan 3">
 
     <a href="cardigan4 v1.html">
-      <img src="cardigan 4.jpg" alt="Sweatpants 4">
+      <img src="cardigan 4.jpg" alt="cardigan 4">
 
     <a href="cardigan5 v1.html">
-      <img src="cardigan 5.jpg" alt="Sweatpants 5">
+      <img src="cardigan 5.jpg" alt="cardigan 5">
 
     <a href="cardigan6 v1.html">
-      <img src="cardigan 6.jpg" alt="Sweatpants 6">
+      <img src="cardigan 6.jpg" alt="cardigan 6">
   </div>
 
 <a class="back-link" href="index.html">← Back to all</a>
