--- a/skirt-page v18.html
+++ b/skirt-page v18.html
@@ -54,22 +54,22 @@
   <h1 style="text-align:center; margin-bottom: 20px;">Skirt Collection</h1>
 
   <div class="gallery">
-    <a href="shirt1 v3.html">
+    <a href="shirt1 v4.html">
       <img src="skirt.jpg" alt="Skirt 1">
 
-    <a href="skirt2.html">
+    <a href="skirt2 v1.html">
       <img src="skirt v2.jpg" alt="Skirt 2">
 
-    <a href="skirt1.html">
+    <a href="skirt3 v4.html">
       <img src="skirt v3.jpg" alt="Skirt 3">
 
-    <a href="skirt2.html">
+    <a href="skirt4 v1.html">
       <img src="skirt v4.jpg" alt="Skirt 4">
 
-    <a href="skirt1.html">
+    <a href="skirt5 v1.html">
       <img src="skirt v5.jpg" alt="Skirt 5">
 
-    <a href="skirt2.html">
+    <a href="skirt6 v1.html">
       <img src="skirt v6.jpg" alt="Skirt 6">
   </div>
 
