--- a/skirt1 v4.html
+++ b/skirt1 v4.html
@@ -8,7 +8,7 @@
       font-family: sans-serif;
       padding: 40px;
       max-width: 800px;
-      margin: auto;
+      margin: 0px;
       background-color: #fefefe;
       color: #333;
     }
