--- a/cardigan-page v1.html
+++ b/cardigan-page v1.html
@@ -55,7 +55,7 @@
 
   <div class="gallery">
     <a href="cardigan1 v1.html">
-      <img src="cardigan.jpg" alt="cardigan 1">
+      <img src="cardigan1 .jpg" alt="cardigan 1">
 
     <a href="cardigan2 v1.html">
       <img src="cardigan 2.jpg" alt="cardigan 2">
