--- a/cardigan1 v1.html
+++ b/cardigan1 v1.html
@@ -69,7 +69,7 @@
 <body>
 
   <h1>pink wool cardigan<h1>
-  <img src="cardigan.jpg" alt="wool cardigan">
+  <img src="cardigan1 .jpg" alt="wool cardigan">
 
   <div class="price">$22.94</div>
 
@@ -92,7 +92,7 @@
         id: 1,
         name: 'wool cardigan',
         price: 22.94,
-        image: 'cardigan.jpg'
+        image: 'cardigan1 .jpg'
       };
 
       // Get existing cart or create a new one
