--- a/cardigan-page v1.html
+++ b/cardigan-page v1.html
@@ -64,7 +64,7 @@
       <img src="cardigan 3.jpg" alt="cardigan 3">
 
     <a href="cardigan4 v1.html">
-      <img src="cardigan 4.jpg" alt="cardigan 4">
+      <img src="Cardigan 4.jpg" alt="cardigan 4">
 
     <a href="cardigan5 v1.html">
       <img src="cardigan 5.jpg" alt="cardigan 5">
