--- a/cardigan4 v1.html
+++ b/cardigan4 v1.html
@@ -69,7 +69,7 @@
 <body>
 
   <h1>pink cardigan<h1>
-  <img src="cardigan 4.jpg" alt="pink cardigan">
+  <img src="Cardigan 4.jpg" alt="pink cardigan">
 
   <div class="price">$32.82</div>
 
