--- a/cardigan4 v1.html
+++ b/cardigan4 v1.html
@@ -92,7 +92,7 @@
         id: 1,
         name: 'pink cardigan',
         price: 32.82,
-        image: 'cardigan 4.jpg'
+        image: 'Cardigan 4.jpg'
       };
 
       // Get existing cart or create a new one
