--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 	    <a href="cardigan-page v1.html">
 	<div>
 
-<div id="cardigan" class="parallax-section" style="background-image: url('Cardigan1 .jpg');">
+<div id="cardigan" class="parallax-section" style="background-image: url('cardigan 2.jpg');">
   <h1>Cardigan</h1>
 </div>
 	 <class="parallax-container">
