--- a/cardigan1 v1.html
+++ b/cardigan1 v1.html
@@ -69,7 +69,7 @@
 <body>
 
   <h1>pink wool cardigan<h1>
-  <img src="cardigan1 .jpg" alt="wool cardigan">
+  <img src="Cardigan1 .jpg" alt="wool cardigan">
 
   <div class="price">$22.94</div>
 
