--- a/cardigan1 v1.html
+++ b/cardigan1 v1.html
@@ -92,7 +92,7 @@
         id: 1,
         name: 'wool cardigan',
         price: 22.94,
-        image: 'cardigan1 .jpg'
+        image: 'Cardigan1 .jpg'
       };
 
       // Get existing cart or create a new one
