Update sweat pants-page v1.html

--- a/sweat pants-page v1.html
+++ b/sweat pants-page v1.html
@@ -70,7 +70,7 @@
       <img src="sweat pants 5.jpg" alt="Shirt 5">
 
     <a href="sweat pants6 v1.html">
-      <img src="seat pant 6.jpg" alt="Shirt 6">
+      <img src="sweat pants 6.jpg" alt="Shirt 6">
   </div>
 
 <a class="back-link" href="index.html">← Back to all skirts</a>
