--- a/sweat pants2 v1.html
+++ b/sweat pants2 v1.html
@@ -84,7 +84,7 @@
   <button class="btn" onclick="addToCart()">Add to Cart</button>
   <div id="confirmation" class="confirmation"></div>
 
-  <a class="back-link" href="sweatpants-page v1.html">← Back to all skirts</a>
+  <a class="back-link" href="sweat pants-page v1.html">← Back to all sweatpants</a>
 
   <script>
     function addToCart() {
