--- a/skirt-page v18.html
+++ b/skirt-page v18.html
@@ -54,7 +54,7 @@
   <h1 style="text-align:center; margin-bottom: 20px;">Skirt Collection</h1>
 
   <div class="gallery">
-    <a href="shirt1 v4.html">
+    <a href="skirt1 v4.html">
       <img src="skirt.jpg" alt="Skirt 1">
 
     <a href="skirt2 v1.html">
