--- a/skirt6 v1.html
+++ b/skirt6 v1.html
@@ -84,7 +84,7 @@
   <button class="btn" onclick="addToCart()">Add to Cart</button>
   <div id="confirmation" class="confirmation"></div>
 
-  <a class="back-link" href="file:///C:/Users/evaji/OneDrive/Desktop/king/skirt-page%20v18.html">← Back to all skirts</a>
+  <a class="back-link" href="skirt-page v18.html">← Back to all skirts</a>
 
   <script>
     function addToCart() {
