--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 </scrip>
 		
 <nav id="mobileMenu" class="mobile-menu">
-  <a href="#cardigan">Cardigan</a>
-  <a href="#sweat-pant">Sweat Pant</a>
-  <a href="skirt-page v5.html">Skirt</a>
-  <a href="#shirt">Shirt</a>
+  <a href="#cardigan-page v1.html">Cardigan</a>
+  <a href="#sweat pant-page v1.html">Sweat Pant</a>
+  <a href="skirt-page v18.html">Skirt</a>
+  <a href="#shirt-page v8.html">Shirt</a>
 </nav>
 
 <!-- JS -->
