--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		
 <nav id="mobileMenu" class="mobile-menu">
   <a href="#cardigan-page v1.html">Cardigan</a>
-  <a href="#sweat pant-page v1.html">Sweat Pant</a>
+  <a href="#sweat pants-page v1.html">Sweat Pant</a>
   <a href="skirt-page v18.html">Skirt</a>
   <a href="#shirt-page v8.html">Shirt</a>
 </nav>
