--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     if (foundSection) {
       foundSection.scrollIntoView({ behavior: 'smooth' });
     } else {
-      alert("No matching items found. Available items: Cardigan, cardigans, Sweat Pant, sweatpants, pants, pant, sweat pants, skirts, Skirt, shirts, Shirt");
+      alert("No matching items found. Available items: Cardigan, Sweat Pant, Skirt, Shirt");
     }
   }
 </script>
