--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
   <a href="cardigan-page v1.html">cardigan</a>
   <a href="sweat pants-page v1.html">Sweat Pant</a>
   <a href="skirt-page v18.html">Skirt</a>
-  <a href="shirt-page v8.html">Shirt</a>
+  <a href="#shirt-page v8.html">Shirt</a>
 </nav>
 
 <!-- JS -->
