--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background-color: #333;
+      background-color: #dceaf7;
       padding: 10px 20px;
       color: white;
       position: sticky;
@@ -57,7 +57,7 @@
 
     .searchbox {
       padding: 10px;
-      background-color: #f8f8f8;
+      background-color: #dceaf7;
       text-align: center;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       display: none;
