--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     .searchbox input[type="text"] {
       padding: 6px;
       font-size: 17px;
-      border: 1px solid #ddd;
+      border: 1px solid #a6caec;
       border-radius: 4px;
       width: 60%;
       max-width: 300px;
