--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     .logo i {
       font-size: 24px;
       margin-right: 8px;
-      color: orange;
+      color: #a6ceaf7;
     }
 
     .logo span {
