--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     .searchbox button {
       padding: 8px 16px;
       margin-left: 10px;
-      background: orange;
+      background:  #163e64;
       color: white;
       border: none;
       border-radius: 4px;
