--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     .searchbox input[type="text"] {
       padding: 6px;
       font-size: 17px;
-      border: 1px solid #a6caec;
+      border: 1px solid  #163e64;
       border-radius: 4px;
       width: 60%;
       max-width: 300px;
