--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     }
 
     .mobile-menu a:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
 
     .mobile-menu.show {
