--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       justify-content: center;
       align-items: center;
       color: white;
-      text-shadow:  #163e64;
+      text-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
       font-size: 3rem;
     }
   </style>
